--- a/tests/samples/templates/sample.html
+++ b/tests/samples/templates/sample.html
@@ -1,1 +1,1 @@
-<h2>Welcome <%= sources.username %></h2>
+<h2>Welcome <%= sources.username %></h2><h3><%= sources._.compact([undefined, true, 1]) %></h3>
